# ainl-cortex

./: .gitignore  .mcp.json  ACTIVATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  COMPRESSION_ACTIVATION_SUMMARY.md  CONTRIBUTING.md  LICENSE  NOTICE  PHASES_2-6_COMPLETE.md  README.md  SECURITY.md  SELF_LEARNING_IMPLEMENTATION_PLAN.md  SELF_LEARNING_SUMMARY.md  STATUS.txt  SUPPORT.md  TRADEMARKS.md  config.json  config.local.json.example  mcp_launch.cmd  mcp_launch.py  mcp_launch.sh  migrate_to_native.py  migrate_to_python.py  pyproject.toml  requirements-ainl.txt  setup.cmd  setup.ps1  setup.sh  test_mcp.py
.claude-plugin/: plugin.json
.github/workflows/: publish-ainl-native.yml  windows-install-ci.yml
a2a/agents/: registry.json
agents/: context_monitor.py
ainl_native/: Cargo.toml  README.md  pyproject.toml
ainl_native/src/: convert.rs  freshness.rs  knowledge.rs  lib.rs  persona.rs  procedure.rs  reconcile.rs  session.rs  store.rs  tagger.rs  trajectory.rs
cli/: compression_advanced_cli.py  compression_cli.py
docs/: ACTIVATION.md  ADVANCED_COMPRESSION.md  AINL_CONCEPTS.md  AINL_LANGUAGE_GUIDE.md  CLAUDE_CODE_NATIVE_UPGRADE.md  COMPRESSION_ECO_MODE.md  COST_CONTROL.md  DEEP_DIVE_AINL_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INSTALL_WINDOWS.md  SELF_HEALING.md  TEST_REMEDIATION_TOP30.md  USER_GUIDE_AINL.md
docs/dev/: ACTIVATION.md  ACTIVATION_FIX.md  AINL_INTEGRATION_PLAN.md  AUTO_ACTIVATION.md  COMPLETION_REPORT.md  COMPRESSION_ACTIVATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION_REPORT.md  PHASES_2-6_COMPLETE.md  PYPI_REFACTOR_SUMMARY.md  QUICK_START_IMPLEMENTATION.md  STATUS_FINAL.md  TEST_USER_PROMPT_COMPRESSION.md
examples/compact/: hello_compact.ainl
hooks/: a2a_bridge_daemon.py  a2a_inbox_writer.py  ainl_detection.py  ainl_validator.py  hooks.json  notifications.py  post_compact.py  post_tool_use.py  pre_compact.py  session_banner.py  startup.py  stop.py  telemetry.py  user_prompt_expansion.py  user_prompt_submit.py
hooks/shared/: a2a_client.py  a2a_graph.py  a2a_inbox.py  a2a_log.py  agent_registry.py  armaraos_daemon.py  config.py  conversation_detection.py  hook_metrics.py  llm_client.py  logger.py  mcp_bootstrap.py  project_id.py  session_delta.py  session_pending.py  sessionstart_visibility.py  stdin.py
mcp_server/: __init__.py  a2a_store.py  a2a_tools.py  adaptive_eco.py  ainl_example_paths.py  ainl_patterns.py  ainl_tools.py  anchored_summary.py  artifact_ingest.py  autonomous_scheduler.py  autonomous_tasks.py  build_stamp.py  cache_awareness.py  claude_integration_heal.py  claude_memory_bridge.py  claude_paths.py  compression.py  compression_pipeline.py  compression_profiles.py  config.py  config_loader.py  context_compiler.py  cortex_cost_snapshot.py  cost_profiles.py  deps_compat.py  extractor.py  fact_extraction.py  failure_advisor.py  failure_learning.py  goal_tracker.py  graph_store.py  hook_launcher_heal.py  import_compat.py  improvement_proposals.py  install_agent_hint.py  install_bootstrap.py  knowledge_config.py  knowledge_pipeline.py  knowledge_writer.py  mcp_launcher_config.py  (+32 more)
profiles/: test_project.json  test_project_2.json  test_project_quality.json
scripts/: MIGRATION.md  __init__.py  backfill_knowledge.py  backup_install.sh  benchmark_recall_modes.py  bootstrap_no_python.ps1  bootstrap_no_python.sh  bug_hunt_matrix.ps1  bug_hunt_matrix.sh  check_conversation_detection_parity.sh  check_live_status.sh  claude_do_native_upgrade.sh  claude_install.py  codemod_relative_imports.py  configure_marketplace.py  ensure_mcp_import_compat.py  ensure_runtime_preflight.py  install_ainl_native.sh  migrate_python_to_native.ps1  migrate_python_to_native.py  migrate_python_to_native.sh  native_greenfield_flip.py  native_upgrade_status.py  rebuild_ainl_native.sh  register_claude_settings.py  repartition_by_repo.py  restore_install.sh  run_hook.cmd  run_hook.py  setup_install.py  smoke_test.sh  sync_installed_plugins.py  test_compression.py  test_hooks.py  upgrade_to_native.ps1  upgrade_to_native.py  upgrade_to_native.sh  verify_activation.sh  verify_mcp_tools.py  verify_migration.py  (+4 more)
tests/: conftest.py  integration_test.sh  knowledge_test_util.py  test_a2a_gating.py  test_agent_registry.py  test_ainl_detection.py  test_ainl_example_paths.py  test_armaraos_cost_bridge.py  test_artifact_ingest.py  test_autonomous_mode.py  test_bash_failure_detection.py  test_branch_memory.py  test_build_stamp.py  test_claude_integration_heal.py  test_compact_hooks.py  test_compaction_recovery.py  test_compression_pipeline.py  test_compression_profiles.py  test_confidence_decay.py  test_config_loader.py  test_conversation_detection.py  test_cortex_cost_snapshot.py  test_cost_control_hooks.py  test_cost_control_mcp.py  test_cost_control_native.py  test_cost_profiles.py  test_delta_gates.py  test_destructive_backup.py  test_fact_extraction.py  test_failure_advisor.py  test_failure_learning.py  test_failure_production_gaps.py  test_failure_trends.py  test_gap_closures.py  test_hook_launcher_heal.py  test_hook_mcp_bootstrap.py  test_hook_metrics_aggregate.py  test_install_agent_hint.py  test_install_bootstrap.py  test_knowledge_capture_xplat.py  (+36 more)
tests/fixtures/: conversation_detection_corpus.json  craigcast_research_snippet.md
