[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ainl-cortex"
version = "0.2.0"
description = "Graph-native memory, self-learning, and multi-agent coordination for Claude Code"
readme = "README.md"
authors = [
    {name = "Steven Hooley", email = "steven@hooley.me"}
]
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ainl", "graph", "memory", "agent", "claude-code", "a2a", "multi-agent", "goals"]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sbhooley/ainl-cortex"
Documentation = "https://github.com/sbhooley/ainl-cortex/blob/main/README.md"
Repository = "https://github.com/sbhooley/ainl-cortex"
Issues = "https://github.com/sbhooley/ainl-cortex/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
