[package]
name = "ainl_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "ainl_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Core graph memory
ainl-memory = "0.1.11-alpha"
ainl-contracts = "0.1.2"

# Persona evolution
ainl-persona = "0.1.8"

# Semantic tagging
ainl-semantic-tagger = { version = "0.1.8", features = ["serde"] }

# Failure learning
ainl-failure-learning = "0.1.1"

# Procedure learning
ainl-procedure-learning = "0.1.0"

# Context freshness
ainl-context-freshness = "0.1.1"

# Trajectory
ainl-trajectory = "0.1.1"
