[package]
name = "ainl_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "ainl_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Core graph memory
ainl-memory = "0.1.12-alpha"
ainl-contracts = "0.1.3"

# Persona evolution
ainl-persona = "0.1.9"

# Semantic tagging
ainl-semantic-tagger = { version = "0.1.9", features = ["serde"] }

# Failure learning
ainl-failure-learning = "0.1.2"

# Procedure learning
ainl-procedure-learning = "0.1.1"

# Context freshness
ainl-context-freshness = "0.1.2"

# Trajectory
ainl-trajectory = "0.1.2"
